[package]
name = "mentci-aid"
version = "0.1.0"
edition = "2021"
description = "mentci-aid (Mentci-AI Daemon/Aid): A Level 5 autonomous pipeline engine for symbolic manipulation. Status: Not in a running state."

[[bin]]
name = "mentci-ai"
path = "src/main.rs"

[[bin]]
name = "execute"
path = "src/bin/execute.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
capnp = "0.19"
tracing = "0.1"
tracing-subscriber = "0.3"
dot-parser = "0.6.1"
edn-rs = "0.17.4"
pest = "2.8.6"
regex = "1.12.3"
mentci-box-lib = { path = "../mentci-box-lib" }
ractor = "0.11"
walkdir = "2.5"
async-trait = "0.1"
sha2 = "0.10"
num-bigint = "0.4"

[build-dependencies]
capnpc = "0.19"

[dev-dependencies]
tempfile = "3.15"
